style: Remove unnecessary comments in deployment.yaml

--- a/clusters/home/apps/linkstack/deployment.yaml
+++ b/clusters/home/apps/linkstack/deployment.yaml
@@ -17,9 +17,9 @@ spec:
         image: linkstackorg/linkstack:latest
         ports:
         - containerPort: 80
-        # volumeMounts:
-        # - name: linkstack
-        #   mountPath: /htdocs
+        volumeMounts:
+        - name: linkstack
+          mountPath: /htdocs
         env:
         - name: TZ
           value: "Asia/Manila"
@@ -31,6 +31,10 @@ spec:
           value: links.pacholoamit.com
         - name: LOG_LEVEL
           value: "debug"
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       # initContainers:
       # - name: linkstack-init
       #   image: alpine/git
@@ -52,8 +56,8 @@ spec:
       #   volumeMounts:
       #   - name: linkstack
       #     mountPath: /htdocs
-      # volumes:
-      #   - name: linkstack
-      #     persistentVolumeClaim:
-      #       claimName: linkstack
+      volumes:
+        - name: linkstack
+          persistentVolumeClaim:
+            claimName: linkstack
 
