--- a/clusters/home/apps/linkstack/deployment.yaml
+++ b/clusters/home/apps/linkstack/deployment.yaml
@@ -31,10 +31,10 @@ spec:
           value: links.pacholoamit.com
         - name: LOG_LEVEL
           value: "debug"
-      securityContext:
-        runAsUser: 100
-        runAsGroup: 101
-        fsGroup: 101
+      # securityContext:
+      #   runAsUser: 100
+      #   runAsGroup: 101
+      #   fsGroup: 101
       # initContainers:
       # - name: linkstack-init
       #   image: alpine/git
