refactor: Remove unnecessary commented code

--- a/clusters/home/apps/linkstack/deployment.yaml
+++ b/clusters/home/apps/linkstack/deployment.yaml
@@ -17,9 +17,9 @@ spec:
         image: linkstackorg/linkstack:latest
         ports:
         - containerPort: 80
-        # volumeMounts:
-        # - name: linkstack
-        #   mountPath: /htdocs
+        volumeMounts:
+        - name: linkstack
+          mountPath: /htdocs
         env:
         - name: TZ
           value: "Asia/Manila"
@@ -31,33 +31,9 @@ spec:
           value: links.pacholoamit.com
         - name: LOG_LEVEL
           value: "debug"
-      # securityContext:
-      #   runAsUser: 100
-      #   runAsGroup: 101
-      #   fsGroup: 101
-      # initContainers:
-      # - name: linkstack-init
-      #   image: alpine/git
-      #   command: 
-      #   - '/bin/sh'
-      #   - '-c'
-      #   - |
-      #     htdocs_path="/htdocs"
 
-      #     if [ -z "$(ls -A $htdocs_path)" ]; then
-      #       git clone https://github.com/LinkStackOrg/LinkStack.git $htdocs_path
-      #     elif [ "$(ls -A $htdocs_path | wc -l)" -eq 1 ] && [ -d "$htdocs_path/lost+found" ]; then
-      #       echo "Removing 'lost+found' directory"
-      #       rm -rf $htdocs_path/lost+found
-      #       git clone https://github.com/LinkStackOrg/LinkStack.git $htdocs_path
-      #     else
-      #       echo "$htdocs_path is not empty or does not contain only 'lost+found'. Skipping git clone."
-      #     fi
-      #   volumeMounts:
-      #   - name: linkstack
-      #     mountPath: /htdocs
-      # volumes:
-      #   - name: linkstack
-      #     persistentVolumeClaim:
-      #       claimName: linkstack
+      volumes:
+        - name: linkstack
+          persistentVolumeClaim:
+            claimName: linkstack
 
