--- a/clusters/home/apps/linkstack/deployment.yaml
+++ b/clusters/home/apps/linkstack/deployment.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
       - name: linkstack
         imagePullPolicy: IfNotPresent
-        image: linkstackorg/linkstack:v4.4.1
+        image: linkstackorg/linkstack:latest
         ports:
         - containerPort: 80
         volumeMounts:
