--- a/clusters/home/core/kured/release.yaml
+++ b/clusters/home/core/kured/release.yaml
@@ -11,6 +11,6 @@ spec:
       version: "5.3.x"
       sourceRef:
         kind: HelmRepository
-        name: kured
-        namespace: kube-reboot
+        name: kube-reboot
+        namespace: kube-system
       interval: 1m
