--- a/clusters/home/helm/kube-reboot/repository.yaml
+++ b/clusters/home/helm/kube-reboot/repository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: kube-reboot
-  namespace: longhorn-system
+  namespace: kube-system
 spec:
   interval: 30m
   url: https://kubereboot.github.io/charts
