--- a/clusters/home/helm/longhorn/repository.yaml
+++ b/clusters/home/helm/longhorn/repository.yaml
@@ -4,5 +4,5 @@ metadata:
   name: longhorn
   namespace: longhorn-system
 spec:
-  interval: 30m
+  interval: 168h
   url: https://charts.longhorn.io
