--- a/clusters/home/apps/n8n/release.yaml
+++ b/clusters/home/apps/n8n/release.yaml
@@ -28,6 +28,8 @@ spec:
       repository: n8nio/n8n
       tag: 1.18.2
       pullPolicy: IfNotPresent
+    replicaCount: 2
+    
     # extraEnvSecrets:
     #   DB_POSTGRESDB_PASSWORD:
     #     name: postgresql
