--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
   - longhorn
   - velero
   - kured
-  - eraser
+  - eraser # Erases irrelevant container images
+  - reloader # Reloads config maps
