--- a/clusters/home/core/eraser/release.yaml
+++ b/clusters/home/core/eraser/release.yaml
@@ -9,7 +9,7 @@ spec:
       createNamespace: true
   chart:
     spec:
-      chart: eraser/eraser
+      chart: eraser
       version: "1.3.x"
       sourceRef:
         kind: HelmRepository
