feat(reloader): Add release.yaml for reloader

--- a/clusters/home/helm/stakater/repository.yaml
+++ b/clusters/home/helm/stakater/repository.yaml
@@ -1,5 +1,5 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: stakater
+kind: HelmRepository
 metadata:
   name: stakater
   namespace: flux-system
