--- a/clusters/home/core/reloader/kustomization.yaml
+++ b/clusters/home/core/reloader/kustomization.yaml
@@ -1,7 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
-bases:
-  - https://github.com/stakater/Reloader/deployments/kubernetes
-
-namespace: reloader
+resources:
+  - release.yaml
