--- a/clusters/home/core/reloader/release.yaml
+++ b/clusters/home/core/reloader/release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: reloader
-  namespace: eraser-system
+  namespace: flux-system
 spec:
   interval: 5m
   install:
