--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ingress-nginx
   - longhorn
   - velero
-  - kured
+  - kured # Restart kubernetes nodes
   - eraser # Erases irrelevant container images
   - reloader # Reloads config maps
+  - node-problem-detector #   Detects if a node has been affected by an issue such as faulty hardware or kernel deadlocks, preventing scheduling.
