chore: Add LoadBalancer service type

--- a/clusters/home/apps/n8n/release.yaml
+++ b/clusters/home/apps/n8n/release.yaml
@@ -29,7 +29,8 @@ spec:
       tag: 1.18.2
       pullPolicy: IfNotPresent
     replicaCount: 2
-    
+    service:
+      type: LoadBalancer
     # extraEnvSecrets:
     #   DB_POSTGRESDB_PASSWORD:
     #     name: postgresql
