--- a/clusters/home/apps/superset/secret.yaml
+++ b/clusters/home/apps/superset/secret.yaml
@@ -4,9 +4,9 @@ metadata:
     name: superset
 type: Opaque
 stringData:
-    postgresPassword: ENC[AES256_GCM,data:ksVlWgahHCcE93yCA6OB70ysg6CYjkDLxLOKVbuxJhCtZmwrnoiWy+Ic0vig9a7pqiOcx1X3J37vAD1VsgcbPbtg9AZFjIG7vtEu1A==,iv:4hZD+NXAgHQv6hS6wmjM/d3LG3zwuI/RCT2OukVt6Zo=,tag:1c+OL4uVNjM1GeMHaPK62A==,type:str]
-    password: ENC[AES256_GCM,data:S3VDaDO/0+PVdCV9k4JpgEdWf4mvDaOFzCj6Fknv/it7gA76j2ErNhHCPSnFGBQxyvsKhYKWg5stHw80p0ECmaYzo86ldtV1IRCcLw==,iv:BWZpW6ypKJ3jLkV93UXvtvtYyTrZzo2MBnCjoBDan6k=,tag:Mzs4729pT06zEe+1JAHCrA==,type:str]
-    replicationPassword: ENC[AES256_GCM,data:oHkQIef+CbQfT1EQD5hDdxnSVFinIq+T7UQqNWLTYJA1mMZKk8+tbhSD7oqrWvhlS6dgsbLqPvW51rFcQc/9cUT1otPKZ7B0HQPX7g==,iv:ECSAOtB3NXWQS0wGfolOGLs8XrbJFrJ+PV7iEkBKB2M=,tag:Fn29NtyApwV80x/A7UL3Dg==,type:str]
+    postgres-password: ENC[AES256_GCM,data:Xipg8eUbdJrLZ7lD2QCAXlTDxSrwgtFw72xaOEDocNH0mBO7dia/CivNoMyy0CLp4jX+dpuHm6GF6+besPUwoEONrApCNrHVY3/UIQ==,iv:Jr23rLAuEs/Bneu4+p1Emoc9rXjTByyJ+MaaGj64pKI=,tag:rVd1FSNUeqqHGbcGi90BpA==,type:str]
+    #ENC[AES256_GCM,data:zpXHjWeMbuTTaF4VpT3R5uNU2XppycSUEzKfTDB0kuum3TypNRIWKBXhPeHuIIqDflyfLek0K1Kx+VFa5HCOtoGjm7TU2CKu4k5hfu/bZyBt4pPr+Nxp,iv:mq+FHBeH9ZDCc5bgem0qAVh8zM1shX4tqi0LX76WDvI=,tag:So8ffxEZqgjkr0bdt8RrPQ==,type:comment]
+    #ENC[AES256_GCM,data:tiLp1E4eaOxmivie9ah9/g5dvSRp7lU1xs4f+ZrCab+97nFPgbpqNurkjmFBCezG9WsVpnOZuj0kZ6JHjks4rQr9TV8FAE5/P7vcuB9Z/khDcoJeOlPmNrdcTg0qaMHdTO0=,iv:PWUX8eXMgq0/ZBH4t0WN+gkP8xEiTPdBYQ+ITHBMatc=,tag:m0cgIaTcTnopplVDniDl9A==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NWxQVm1LLzZWaC92bFlmWHhBek12VDQKpOvgTnD093Fbc+bQV0m9h7TY/PJ8Uyee
             J0kqEJjw0J1TblrH16l1c2qDgGd1ZzijFsOOqg+tdM1iC4vb0o8Q+A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-11T13:53:15Z"
-    mac: ENC[AES256_GCM,data:dcmPwlOLgQSmpJlVa6Obp0efVV4mJdbN6LlDxnkxG0to4mwPTILR+cdItNTby2TdbgZ5GART3w+ezMHYY3UdcbpjnnVS43zQC84pbe0dRNCSm/eFmoK6fbw+DfZbBLSOdthnyhWScFzgCaAWwm4cQbJr2i5yDNA8o76eXW59CeQ=,iv:DvhNQ9l4577bZVwE87WLvy4Q1zxzlJPwrQR4LOTP8Pc=,tag:CB5uZWTarc7gkh/IQqnSFw==,type:str]
+    lastmodified: "2023-12-11T14:00:28Z"
+    mac: ENC[AES256_GCM,data:9gy9/bF8yCYXlxemh5dP/UngnYdBd+vm1X1ZWBD8TcKyhtX0jjK1eKYk/dlra2Ws15MCORWQO6iqlOZ+T7WA24DqT/HhfQHYWnGkqrDFqGBaDceilDAP2ZfzOCcJVHybn+fjvuScJXbfRk3vw7UljSvt408JwlDIra7K5n0dAuo=,iv:Oss9sp1UloWPoP+40kIjE+mEZm831WzGFkh30vIsVw8=,tag:FrpTXkMD9V3TDYIokgbttg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
