refactor: Update password and replication-password in secret.yaml

--- a/clusters/home/apps/superset/secret.yaml
+++ b/clusters/home/apps/superset/secret.yaml
@@ -5,8 +5,8 @@ metadata:
 type: Opaque
 stringData:
     postgres-password: ENC[AES256_GCM,data:Xipg8eUbdJrLZ7lD2QCAXlTDxSrwgtFw72xaOEDocNH0mBO7dia/CivNoMyy0CLp4jX+dpuHm6GF6+besPUwoEONrApCNrHVY3/UIQ==,iv:Jr23rLAuEs/Bneu4+p1Emoc9rXjTByyJ+MaaGj64pKI=,tag:rVd1FSNUeqqHGbcGi90BpA==,type:str]
-    #ENC[AES256_GCM,data:zpXHjWeMbuTTaF4VpT3R5uNU2XppycSUEzKfTDB0kuum3TypNRIWKBXhPeHuIIqDflyfLek0K1Kx+VFa5HCOtoGjm7TU2CKu4k5hfu/bZyBt4pPr+Nxp,iv:mq+FHBeH9ZDCc5bgem0qAVh8zM1shX4tqi0LX76WDvI=,tag:So8ffxEZqgjkr0bdt8RrPQ==,type:comment]
-    #ENC[AES256_GCM,data:tiLp1E4eaOxmivie9ah9/g5dvSRp7lU1xs4f+ZrCab+97nFPgbpqNurkjmFBCezG9WsVpnOZuj0kZ6JHjks4rQr9TV8FAE5/P7vcuB9Z/khDcoJeOlPmNrdcTg0qaMHdTO0=,iv:PWUX8eXMgq0/ZBH4t0WN+gkP8xEiTPdBYQ+ITHBMatc=,tag:m0cgIaTcTnopplVDniDl9A==,type:comment]
+    password: ENC[AES256_GCM,data:XTziDz8C1XE6FMJbah7yVSnHbvJEYnIPWOFN37oCqwqs/k9lgSEg8+qOqy7x0Ag16357zCvsDcJ+ZHlCYfQh/Zchm8jsnK/JzxqniA==,iv:fZcs0TO3Gj3ooJa9ANtvdqxbp4kACd1NB5qyNpOITes=,tag:Uw74ZbNS7n4esHC1EOUeGA==,type:str]
+    replication-password: ENC[AES256_GCM,data:jpvn49zOqwyxf48nyWn5aQfey8Ku9iB/kdTGhgaFlEMVV35Wf8Sj7EpF+Mg/QuJ/il3qXihw9RJvRZoncx/fEQ1RRObM2ExjcAhqVg==,iv:YmRI7Fjog7C/9djv/mtyDUVYaBOrhiGmm4aecAKOJyM=,tag:AsCEqU6R9ulT4u5R4Un7Ng==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NWxQVm1LLzZWaC92bFlmWHhBek12VDQKpOvgTnD093Fbc+bQV0m9h7TY/PJ8Uyee
             J0kqEJjw0J1TblrH16l1c2qDgGd1ZzijFsOOqg+tdM1iC4vb0o8Q+A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-11T14:00:28Z"
-    mac: ENC[AES256_GCM,data:9gy9/bF8yCYXlxemh5dP/UngnYdBd+vm1X1ZWBD8TcKyhtX0jjK1eKYk/dlra2Ws15MCORWQO6iqlOZ+T7WA24DqT/HhfQHYWnGkqrDFqGBaDceilDAP2ZfzOCcJVHybn+fjvuScJXbfRk3vw7UljSvt408JwlDIra7K5n0dAuo=,iv:Oss9sp1UloWPoP+40kIjE+mEZm831WzGFkh30vIsVw8=,tag:FrpTXkMD9V3TDYIokgbttg==,type:str]
+    lastmodified: "2023-12-11T14:12:52Z"
+    mac: ENC[AES256_GCM,data:SYsxNQCAgckS6iqCE99k7zggbOMpvl8dxv2xVIIR7z7gtbyKRGcXfWXzfRrUQIFHEoXQo8vhFt37jzBey1DUm8h8LXg5kocbcPuqCWVP/4COPNlr3nZHhLIjPXyaCeMaROMyXWDyKTkjE63oXsff7BYO8caqp9qantmiG7iSFys=,iv:FF4lld2fWrwX2F9nRYOUNiPpqZCAcXQl/LESwo526Pg=,tag:8rdfG8EF4uhodhmrFTSnBQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
