--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -23,7 +23,7 @@ spec:
     # minimum values.yaml to enable clickhouse support for apache superset deployment
     bootstrapScript: |
       #!/bin/bash
-      pip install clickhouse-connect>=0.6.8 \
+      pip install clickhouse-connect>=0.6.8 && \
       if [ ! -f ~/bootstrap ]; then echo "Running Superset with uid {{ .Values.runAsUser }}" > ~/bootstrap; fi
 
 
