--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -14,6 +14,14 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
+
+    # Configure secret key, required to supress warnings that causes pod creation failures
+    extraEnvRaw:
+      - name: SECRET_KEY
+        valueFrom:
+          secretKeyRef:
+            name: superset
+            key: secret-key
     # Set postgresql credentials
     postgresql:
       enabled: true
