--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -14,7 +14,9 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
-
+    configOverrides:
+      secret: |
+        SECRET_KEY = '{{ .Values.extraEnvRaw[0].valueFrom.secretKeyRef.key }}'
     # Configure secret key, required to supress warnings that causes pod creation failures
     extraEnvRaw:
       - name: SECRET_KEY
