--- a/clusters/home/apps/superset/secret-db.yaml
+++ b/clusters/home/apps/superset/secret-db.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: superset
+    name: superset-db
 type: Opaque
 stringData:
     postgres-password: ENC[AES256_GCM,data:Xipg8eUbdJrLZ7lD2QCAXlTDxSrwgtFw72xaOEDocNH0mBO7dia/CivNoMyy0CLp4jX+dpuHm6GF6+besPUwoEONrApCNrHVY3/UIQ==,iv:Jr23rLAuEs/Bneu4+p1Emoc9rXjTByyJ+MaaGj64pKI=,tag:rVd1FSNUeqqHGbcGi90BpA==,type:str]
     password: ENC[AES256_GCM,data:XTziDz8C1XE6FMJbah7yVSnHbvJEYnIPWOFN37oCqwqs/k9lgSEg8+qOqy7x0Ag16357zCvsDcJ+ZHlCYfQh/Zchm8jsnK/JzxqniA==,iv:fZcs0TO3Gj3ooJa9ANtvdqxbp4kACd1NB5qyNpOITes=,tag:Uw74ZbNS7n4esHC1EOUeGA==,type:str]
     replication-password: ENC[AES256_GCM,data:jpvn49zOqwyxf48nyWn5aQfey8Ku9iB/kdTGhgaFlEMVV35Wf8Sj7EpF+Mg/QuJ/il3qXihw9RJvRZoncx/fEQ1RRObM2ExjcAhqVg==,iv:YmRI7Fjog7C/9djv/mtyDUVYaBOrhiGmm4aecAKOJyM=,tag:AsCEqU6R9ulT4u5R4Un7Ng==,type:str]
-    secret-key: ENC[AES256_GCM,data:jEyXHan5xVSkxWfXnIJOSD+HegFg/1mJUgItSOYqaO6XxGUN7WaU7O8N3dykO97WJtl1UijNk0k=,iv:BL6uAJDT8nnEu4IvwyzPfszvdO7zYQE4hpj0NoT+TK4=,tag:rcZWEGwssmOBT/YXdBj+Lw==,type:str]
+
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             NWxQVm1LLzZWaC92bFlmWHhBek12VDQKpOvgTnD093Fbc+bQV0m9h7TY/PJ8Uyee
             J0kqEJjw0J1TblrH16l1c2qDgGd1ZzijFsOOqg+tdM1iC4vb0o8Q+A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-11T14:32:15Z"
-    mac: ENC[AES256_GCM,data:zyELDFsy1pFDc2bn5GF652hxtp65FosznHeIzHC6KgJaI0IJMU0e5oJvWusefKeWbk9By0riobOKP1izSsm05lwH/yg8AMUiqLN2NsQ0++uUWEA+qBIh1dS2FEEiWKHL7bky7TS1DAB6ot2i367P7SEVJI6YGxHLItRxh2xHIWE=,iv:Hi0lx7fpb67fpe1dO2dBEGu/l3cuVEEi98dk6PsQDKc=,tag:wPegKjACdxRQ1r6UkIAmYw==,type:str]
+    lastmodified: "2023-12-11T15:04:46Z"
+    mac: ENC[AES256_GCM,data:kR61sHPmU9X41N5g9zGeug2irdanKhdvQsdABhoSgWavBTeMB6a429/w7aJRTywGnsoJUlhNR/cZiWCozQ5ysqObXO38qS0KmDJ/Qk/YJ9+hczDZA+JkACYh49cmLV6jLPa6blum3h+QYp/nrR9vjGEX9/Jma/gERvgnkFU9avQ=,iv:RObc9Kmsfh8kSgosNqFmeI+fgj4FnVFVFUZIxzbeaas=,tag:0Uw7px5jWGq0UHPJl0udGw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
