--- a/clusters/home/apps/superset/secret-superset.yaml
+++ b/clusters/home/apps/superset/secret-superset.yaml
@@ -1,14 +1,34 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: superset
+    name: superset
 type: Opaque
 stringData:
-  DB_HOST: superset-postgresql
-  DB_NAME: superset
-  DB_PASS: fAdcZ88K4WvRMeGd2q4bsys6zf2QpU4muKyRrsRsp6tCvshT34oVwVsdfcXcLTxZjqurAvpoJbda
-  DB_PORT: '5432'
-  DB_USER: superset
-  REDIS_HOST: superset-redis-headless
-  REDIS_PORT: '6379'
-  SECRET_KEY: AeDNQtvuCD2wkDk6jP3POLjYH4LVhHEey7oHzFJh2/2HaRC3LJAgCFbm
+    DB_HOST: ENC[AES256_GCM,data:2AXdxNkSQbemu+v3ZhHUn7FJ5w==,iv:YUChm270zHuTk0+EMBI4DFDezOcvQmU7+iermF4fCm8=,tag:eVypl/ST+Kt2Mb90azXT/Q==,type:str]
+    DB_NAME: ENC[AES256_GCM,data:7cPrfZTbh7A=,iv:wwPbaFBHceM2Wn7qjCpIhntBYIAv9/AOSPPndc9LySo=,tag:BRj30mr5GO9wB22sx53wYQ==,type:str]
+    DB_PASS: ENC[AES256_GCM,data:4Flut3fkzGxglYRYQPltKh5uxHu88FXwd/dxOtJ4tLW2gxUKq62GQ1QpRFO3WdfziG8Achl82xRu7q3+7Epz481IOmLvC+0QSIUJaw==,iv:S5FByNEspKY/OGmnXhSkeTk7d4TcovstidY/XSaK7uM=,tag:6A55uMV7gToy/DvoQTcfkw==,type:str]
+    DB_PORT: ENC[AES256_GCM,data:KZU8zg==,iv:kBCN7XyZCCnojkEYcFVrWuEXXT2slClhNZeMM5B0mHo=,tag:yznsdgqB3Yc7Hklmj9NtCQ==,type:str]
+    DB_USER: ENC[AES256_GCM,data:Wyoj8ZOiwvI=,iv:RIHD7CVPkZZkv6En/ZtNU7nyPiqvoFUgRKFiRM7qQ5c=,tag:PFrjn+65476+hlgdys/6mQ==,type:str]
+    REDIS_HOST: ENC[AES256_GCM,data:3iHB2nYQUn3QPUXC0gQH+u6hd95wLE4=,iv:O1miHnzRK6UzJJzvXA1JlWRujwATze2h09+O+Sk+66Y=,tag:efuZRuRY8mK6j7+lefjhXA==,type:str]
+    REDIS_PORT: ENC[AES256_GCM,data:b66JuQ==,iv:4qRT2AuMv0cPVLtiEacimGmWyMlbTtJmzGl1VZxkRcQ=,tag:fv12bb0vqx83WXkgUzuLDg==,type:str]
+    SECRET_KEY: ENC[AES256_GCM,data:yvRAho1C0TQVUfSkqX0vqHVPQVPkc6GiUx6JSpUJzz/y4nXXhO93EMZ3yv9CUKkuZNQreGmY2wc=,iv:WyMAaRIQuX6eduG0aETE0KvUl2Ztnnd39E0lo24JF50=,tag:W0n/S6gE5IT0uS7oOchAaw==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0ZkF3eWZWY052dmVmdE9P
+            REtOU280TmFWNFVYVmdIZzR5WGprcWVlUjJVCmdoT1RnWXhzQTRDWTRyaGdoOXRX
+            bWJhclRBNXZXMFpRenJCcGZFRVhmSFkKLS0tIGNiSTVvMStkWFVuUFVZcWswbE1i
+            d0xUeG9pV0ovVUo3S0R2aTlhUTR0Z2sKYCZ/AUVWEXJSzQDN+AWnhSKb5tLLwY/j
+            r7IazGG0gh54Y5av1fynpyYSOwn0m1hKHIoqPX35UV6jWPIdRp3/kA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-12-11T15:08:17Z"
+    mac: ENC[AES256_GCM,data:i40rH5OgtkpE31pwfWRx1CImilh4b+WYlzM+6awUIXBBiB8dmdBMGSNJAx9pX+IwyOOUzEtqfnx+F4z13jwzf6v0ZqFWTLMyfJE5nY8yheB3ser0qKLS98IVA3dAkWWbHbenlt78/rueYUpAPgMAL91RVrJVZqtZVUeh0Cc2yD8=,iv:H+nDVca8s1tfLAf7NiGwMsOCjO/avcg7s6LJQ3ZLwMQ=,tag:3SPpU4wFHm3wmqNpBntwRg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
