--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -15,7 +15,7 @@ spec:
       interval: 1m
   values:
       # Configure secret key, required to supress warnings that causes pod creation failures
-    envFromSecret: superset
+    envFromSecret: superset-env
 
     # extraEnvRaw:
     #   - name: SECRET_KEY
