chore: Comment out service type in release.yaml

--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -61,8 +61,8 @@ spec:
         accessModes:
           - ReadWriteMany
 
-    service:
-      type: LoadBalancer
+    # service:
+    #   type: LoadBalancer
     # Ingress for my environment
     ingress:
       enabled: true
