--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -4,14 +4,14 @@ metadata:
   name: superset
 spec:
   interval: 5m
-  install:
-      crds: CreateReplace
-      remediation:
-          retries: 3
-  upgrade:
-      crds: CreateReplace
-      remediation:
-          retries: 3
+  # install:
+  #     crds: CreateReplace
+  #     remediation:
+  #         retries: 3
+  # upgrade:
+  #     crds: CreateReplace
+  #     remediation:
+  #         retries: 3
   chart:
     spec:
       chart: superset
