--- a/clusters/home/apps/superset/secret-superset.yaml
+++ b/clusters/home/apps/superset/secret-superset.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: superset-env
+    name: superset-secret
 type: Opaque
 stringData:
     DB_HOST: ENC[AES256_GCM,data:2AXdxNkSQbemu+v3ZhHUn7FJ5w==,iv:YUChm270zHuTk0+EMBI4DFDezOcvQmU7+iermF4fCm8=,tag:eVypl/ST+Kt2Mb90azXT/Q==,type:str]
@@ -27,8 +27,8 @@ sops:
             d0xUeG9pV0ovVUo3S0R2aTlhUTR0Z2sKYCZ/AUVWEXJSzQDN+AWnhSKb5tLLwY/j
             r7IazGG0gh54Y5av1fynpyYSOwn0m1hKHIoqPX35UV6jWPIdRp3/kA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-12-11T15:13:32Z"
-    mac: ENC[AES256_GCM,data:z9IageC3ySbKQxlCyrvakJxlXM1yuDQn2kq77F9P3cme2uqakImZn2Q9VddqQ+MoxNKuuA2vzkkUe8C1qlBG6E58/TthW6n3nxMZEyVvvSCvMsFVR2BKfzCa1RA10ETKJWlgOGbQR9AS30f8JPVeurvnig2K8fNeizqX5DIKELc=,iv:uSnu1WygCULmEkuc1OMKLMOlE1Ou9DPveGJX8Kp1QXQ=,tag:vLn8wQz3V/fWdne0b/ZAdw==,type:str]
+    lastmodified: "2023-12-11T15:26:10Z"
+    mac: ENC[AES256_GCM,data:+rbOIKcXqq/dXHY+pm4vY5QD4qPQS8emX2m2vJwRAGqGJAGHiKgmr4jVxJZGHT6hHMCIRlNxqLBfDX7m9QPKYl5RVczNindRRcZWl7l8TOuDWv9F+Cell64fajEfC5gI3xEjjfbvTnvdwvlklv1zqYHbP7g4p+GOvCexZhIhXug=,iv:qmEIdcsa6LexxkADHSIuSOBEnylGG4Kv32jTfPLFjG0=,tag:sHmYULO67kSSATKLDYRo+Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
