--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -62,8 +62,8 @@ spec:
     # Ingress for my environment
     ingress:
       enabled: true
+      ingressClassName: nginx
       annotations:
-        kubernetes.io/ingress.class: nginx
         nginx.ingress.kubernetes.io/proxy-body-size: 999m # Bypasses the 413 Request Entity Too Large error
         gethomepage.dev/enabled: "true"
         gethomepage.dev/description: SQL Editor & Visualizations
