--- a/clusters/home/apps/superset/release.yaml
+++ b/clusters/home/apps/superset/release.yaml
@@ -14,6 +14,7 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
+      # Docs: https://superset.apache.org/docs/installation/running-on-kubernetes/
       # Configure secret key, required to supress warnings that causes pod creation failures
     envFromSecret: superset-secret # Located in secret-superset.yaml
 
