--- a/clusters/home/apps/netdata/release.yaml
+++ b/clusters/home/apps/netdata/release.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: n8n
+  name: netdata
   namespace: default
 spec:
   interval: 5m
