--- a/clusters/home/apps/netdata/release.yaml
+++ b/clusters/home/apps/netdata/release.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: n8n
-      version: "0.x.x"
+      version: "3.7.x"
       sourceRef:
         kind: HelmRepository
         name: netdata
