fix: change chart name to netdata

--- a/clusters/home/apps/netdata/release.yaml
+++ b/clusters/home/apps/netdata/release.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: n8n
+      chart: netdata
       version: "3.7.x"
       sourceRef:
         kind: HelmRepository
