--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - ingress-nginx
   - longhorn
-  - velero
+  # - velero
   - kured # Restart kubernetes nodes
   - eraser # Erases irrelevant container images
   - reloader # Reloads config maps
