style: Remove commented out vmware-tanzu from kustomization.yaml

--- a/clusters/home/helm/kustomization.yaml
+++ b/clusters/home/helm/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - ingress-nginx
   - longhorn
   - piraeus
-  - vmware-tanzu
+  # - vmware-tanzu
   - kube-reboot
   - eraser
   - stakater
