--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - eraser # Erases irrelevant container images
   - reloader # Reloads config maps
   - node-problem-detector #   Detects if a node has been affected by an issue such as faulty hardware or kernel deadlocks, preventing scheduling.
-  - system-upgrade
+  # - system-upgrade
