--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -29,6 +29,7 @@ spec:
       name: vaultwarden-data
       size: 5Gi
       class: longhorn
+      keepPvc: true
     domain: https://vaultwarden.pacholoamit.com
     ingress:
       enabled: true
