--- a/clusters/home/apps/n8n/pvc.yaml
+++ b/clusters/home/apps/n8n/pvc.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+    - ReadWriteMany
   storageClassName: longhorn
   resources:
     requests:
