--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - postgresql
+  # - postgresql
   - homepage
   - n8n
   - vaultwarden
@@ -10,7 +10,7 @@ resources:
   # - descheduler
   - mariadb-external
   - speedtest-tracker
-  - linkwarden
-  - linkstack
+  # - linkwarden
+  # - linkstack
  # -  netdata
   # - superset
