--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   # - descheduler
   - mariadb-external
   - speedtest-tracker
-  # - linkwarden
-  # - linkstack
+  - linkwarden
+  - linkstack
  # -  netdata
   # - superset
