fix(secret): update lastmodified and mac values

--- a/clusters/home/core/longhorn/secret.yaml
+++ b/clusters/home/core/longhorn/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-data:
-    auth: ENC[AES256_GCM,data:Y+7eNtgEYABR4JlG5hhmqQro4NAfgx/Z9Q4y9E3yozqY0Spy81B2j/UpNaZKZcnULBua58qSCPZCFHRiaTSzYLX9nXU=,iv:Q6G7DD1zXPFMBtsaOi6BkfvQSdmDKLiTcNpIzGkHp/Y=,tag:onrnnHcLngbmlE/TFJ9XDQ==,type:str]
+stringData:
+    auth: ENC[AES256_GCM,data:6KFMioZfblNS3cKU34/g1k1EfRsUQGx3Owv0ySlG7+L2Xuomrog5eJrSZ4zdf53DDA==,iv:PHeO2YfZXza314BzNKf0B+3ra7ZbzmEFdgE3U/kWgf0=,tag:sIbOkinZ9ZS17a3a4gl7Qg==,type:str]
 kind: Secret
 metadata:
     name: basic-auth-longhorn
@@ -20,8 +20,8 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-27T00:06:38Z"
-    mac: ENC[AES256_GCM,data:bexkFTbb5jYilZXKA6M0+KGz3mdkmW6WTY1q/xFQ4VBbUdkHuJZvv8cdUCtloF4UDmaG/GbAX7GbJQ0e8Q/aj1jL5hp1rmESjKY9a7Zfw5KZJUaFZrPljCiTgxOebMA4f2FfxZxzXtnP2Sf3ExkMCgxesccpKDA5fJe2S7d4iGI=,iv:FxzPLe+WxGM2xOQtefkV6lp31lWTPAgJyfVrHDQRJCU=,tag:70Z9YX0Ji/c88VrWTLt9Nw==,type:str]
+    lastmodified: "2023-12-19T10:24:20Z"
+    mac: ENC[AES256_GCM,data:w3HuUd1Urlbe4UlzICd/JrEUe2nS/DULD2HR9jy7EQ4xe2Aa0mud4+8jVdYbzpYEnSaI/HckMmnNEUirtxot+UNA8IPkM3QyB3WgVnB0K/TNlTXeQN9HHqMWDE6TojNsnf8oUhaQRPoM/lh7vy2SHXRl+yKguG+u5C9RpzAHqs8=,iv:QPJN7vywAvUaw4S8CDWG5Bjdb10SXSAKaQUHIV9zHW0=,tag:IUtCOF7DZ++kaS3MZxVmgg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
@@ -49,8 +49,8 @@ sops:
             NFlkTStGWnJiMDE2L0YxMUVPNGp3ejgK4fWwsasehFQY63OFj5UVEAjKLd5gMXHB
             aRkfXIxUJvtBppgY6WRYllS06sCtV0Uk2fIj9h9vtV+WOs/RRcm6yQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-27T00:06:38Z"
-    mac: ENC[AES256_GCM,data:bexkFTbb5jYilZXKA6M0+KGz3mdkmW6WTY1q/xFQ4VBbUdkHuJZvv8cdUCtloF4UDmaG/GbAX7GbJQ0e8Q/aj1jL5hp1rmESjKY9a7Zfw5KZJUaFZrPljCiTgxOebMA4f2FfxZxzXtnP2Sf3ExkMCgxesccpKDA5fJe2S7d4iGI=,iv:FxzPLe+WxGM2xOQtefkV6lp31lWTPAgJyfVrHDQRJCU=,tag:70Z9YX0Ji/c88VrWTLt9Nw==,type:str]
+    lastmodified: "2023-12-19T10:24:20Z"
+    mac: ENC[AES256_GCM,data:w3HuUd1Urlbe4UlzICd/JrEUe2nS/DULD2HR9jy7EQ4xe2Aa0mud4+8jVdYbzpYEnSaI/HckMmnNEUirtxot+UNA8IPkM3QyB3WgVnB0K/TNlTXeQN9HHqMWDE6TojNsnf8oUhaQRPoM/lh7vy2SHXRl+yKguG+u5C9RpzAHqs8=,iv:QPJN7vywAvUaw4S8CDWG5Bjdb10SXSAKaQUHIV9zHW0=,tag:IUtCOF7DZ++kaS3MZxVmgg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
