--- a/clusters/home/base.yaml
+++ b/clusters/home/base.yaml
@@ -5,9 +5,8 @@ metadata:
   name: base
   namespace: flux-system
 spec:
-  interval: 1m
+  interval: 5m0s
   prune: true
-  wait: true
   decryption:
     provider: sops
     secretRef:
