--- a/clusters/home/apps/homepage/release.yaml
+++ b/clusters/home/apps/homepage/release.yaml
@@ -37,8 +37,8 @@ spec:
 
     # This enables the service account to access the necessary resources
     enableRbac: true
-    config:
-      useExistingConfigMap: homepage-configmap
+    # config:
+    #   useExistingConfigMap: homepage-configmap
 
     ingress:
       main:
