--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - postgresql
+  - postgresql
   - homepage
   - n8n
   - vaultwarden
   - cloudflare
   - weaveworks-dashboard
-  # - descheduler
+  - descheduler
   - mariadb-external
   - speedtest-tracker
   - linkwarden
