--- a/clusters/home/base.yaml
+++ b/clusters/home/base.yaml
@@ -1,19 +1,19 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: base
-  namespace: flux-system
-spec:
-  interval: 5m0s
-  prune: true
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
-  dependsOn:
-    - name: helm
-  path: ./clusters/home/base
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: base
+#   namespace: flux-system
+# spec:
+#   interval: 5m0s
+#   prune: true
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-age
+#   dependsOn:
+#     - name: helm
+#   path: ./clusters/home/base
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
