--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ingress-nginx
   - longhorn
+  - snapshot-controller
   # - velero
   - kured # Restart kubernetes nodes
   - eraser # Erases irrelevant container images
