--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - ingress-nginx
   - longhorn
   - snapshot-controller
-  # - velero
+  - velero
   - kured # Restart kubernetes nodes
   - eraser # Erases irrelevant container images
   - reloader # Reloads config maps
