--- a/clusters/home/apps.yaml
+++ b/clusters/home/apps.yaml
@@ -13,6 +13,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: helm
+    - name: base
     - name: core
   path: ./clusters/home/apps
   sourceRef:
