--- a/clusters/home/manifests/apps.yaml
+++ b/clusters/home/manifests/apps.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: core
+  name: apps
   namespace: flux-system
 spec:
   interval: 5m0s
@@ -13,7 +13,9 @@ spec:
       name: sops-age
   dependsOn:
     - name: helm
-  path: ./clusters/home/core
+    - name: core
+    - name: base
+  path: ./clusters/home/apps
   sourceRef:
     kind: GitRepository
     name: flux-system
