--- a/clusters/home/manifests/base.yaml
+++ b/clusters/home/manifests/base.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: base
   namespace: flux-system
 spec:
   interval: 5m0s
@@ -13,8 +13,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: helm
-    - name: core
-  path: ./clusters/home/apps
+  path: ./clusters/home/base
   sourceRef:
     kind: GitRepository
     name: flux-system
