--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -15,7 +15,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: vaultwarden
-        namespace: default
+        namespace: flux-system
       interval: 1m
   values:
     image:
