--- a/clusters/home/core/velero/release.yaml
+++ b/clusters/home/core/velero/release.yaml
@@ -21,7 +21,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: vmware-tanzu
-        namespace: velero
+        namespace: flux-system
       interval: 1m
   values:
     upgradeCRDs: true
