--- a/clusters/home/helm/vmware-tanzu/repository.yaml
+++ b/clusters/home/helm/vmware-tanzu/repository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: vmware-tanzu
-  namespace: velero
+  namespace: flux-system
 spec:
   interval: 30m
   url: https://vmware-tanzu.github.io/helm-charts
