--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -18,6 +18,7 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
+    resourceType: Deployment
     image:
       repository: vaultwarden/server
       tag: "1.30.1-alpine"
@@ -29,7 +30,7 @@ spec:
       name: vaultwarden-data
       size: 5Gi
       class: longhorn
-      keepPvc: true
+      keepPvc: false
     domain: https://vaultwarden.pacholoamit.com
     ingress:
       enabled: true
