--- a/clusters/home/helm/eraser/repository.yaml
+++ b/clusters/home/helm/eraser/repository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: eraser
-  namespace: eraser-system
+  namespace: flux-system
 spec:
   interval: 30m
   url: https://eraser-dev.github.io/eraser/charts
