--- a/clusters/home/core/eraser/release.yaml
+++ b/clusters/home/core/eraser/release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: eraser
-      version: "1.3.x"
+      version: "v1.3.0-beta.0"
       sourceRef:
         kind: HelmRepository
         name: eraser
