--- a/clusters/home/apps/vaultwarden/ingress.yaml
+++ b/clusters/home/apps/vaultwarden/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: vaultwarden
+  namespace: default
   labels:
     name: vaultwarden
   annotations:
