refactor: Remove pvcSpec volumeClaimTemplate

--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -32,4 +32,6 @@ spec:
       class: longhorn
       keepPvc: true
     domain: https://vaultwarden.pacholoamit.com
+    pvcSpec:
+      volumeClaimTemplate:
     
