--- a/clusters/home/apps/vaultwarden/pv.yaml
+++ b/clusters/home/apps/vaultwarden/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: vaultwarden
+  name: pvc-5d307713-b775-4343-ab86-f4c8252c439f
 spec:
   capacity:
     storage: 5Gi
