docs: Update documentation for recreating the cluster

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - postgresql
   - homepage
   # - n8n
-  # - vaultwarden
+  - vaultwarden
   - cloudflare
   - weaveworks-dashboard
   - descheduler
