fix: update namespace in release.yaml and repository.yaml

--- a/clusters/experimental/core/longhorn/release.yaml
+++ b/clusters/experimental/core/longhorn/release.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: longhorn
-        namespace: longhorn-system
+        namespace: flux-system
   values:
     persistence:
       defaultClass: false
