--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - postgresql
+  - postgresql # WARNING: Removing this will also remove the volume
   - homepage
   - n8n
   - vaultwarden
@@ -12,5 +12,5 @@ resources:
   - speedtest-tracker
   - linkwarden
   - linkstack
- # -  netdata
+  # -  netdata
   # - superset
