--- a/clusters/home/core/reloader/release.yaml
+++ b/clusters/home/core/reloader/release.yaml
@@ -10,6 +10,7 @@ spec:
   chart:
     spec:
       chart: reloader
+      version: "1.0.x"
       sourceRef:
         kind: HelmRepository
         name: stakater
