--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   - longhorn
   - velero
   - kured # Restart kubernetes nodes
-  - reloader # Reloads config maps
+  # - reloader # Reloads config maps
   - node-problem-detector #   Detects if a node has been affected by an issue such as faulty hardware or kernel deadlocks, preventing scheduling.
   # - system-upgrade
